--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,40 +18,25 @@
       <a href="../index.html" class="button-link">home</a>
       <a href="./booking.html" class="button-link">booking</a>
     </div>
-    <section class="map">
-      <div class="map__box">
-        <div class="mapouter">
-          <div class="gmap_canvas">
-            <iframe
-              width="1080"
-              height="500"
-              id="gmap_canvas"
-              src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed"
-              frameborder="0"
-              scrolling="no"
-              marginheight="0"
-              marginwidth="0"
-            ></iframe
-            ><a
-              href="https://www.embedgooglemap.net/blog/divi-discount-code-elegant-themes-coupon/"
-              >divi discount</a
-            ><br /><style>
-              .mapouter {
-                position: relative;
-                text-align: right;
-                height: 500px;
-                width: 1080px;
-              }</style
-            ><a href="https://www.embedgooglemap.net"></a
-            ><style>
-              .gmap_canvas {
-                overflow: hidden;
-                background: none !important;
-                height: 500px;
-                width: 1080px;
-              }
-            </style>
-          </div>
+    <section class="map"></section>
+    <section class="contact">
+      <div class="contact__box">
+        <div class="contact__message"></div>
+        <div class="contact__info">
+          <h2 class="header">Contact information</h2>
+
+          <a href="#" class="contact__info__box"
+            ><img src="../icons/map.svg" alt="map" class="contact-img" /> Laguna
+            Venețiană, Provincia Veneția, Italia</a
+          >
+          <a href="tel:0722123123" class="contact__info__box"
+            ><img src="../icons/phone.svg" alt="phone" class="contact-img" />
+            0722 123 123</a
+          >
+          <a href="mailto:mytrip@email.com" class="contact__info__box"
+            ><img src="../icons/mail.svg" alt="mail" class="contact-img" />
+            mytrip@email.com</a
+          >
         </div>
       </div>
     </section>
