--- a/pages/contact.html
+++ b/pages/contact.html
@@ -29,14 +29,15 @@
             Send message
           </h2>
           <form action="#" id="form-contact-message">
-            <input type="text" placeholder="Name" />
-            <input type="text" placeholder="Email" />
+            <input type="text" placeholder="Name" id="name-message" />
+            <input type="text" placeholder="Email" id="email-message" />
             <textarea
               name="message"
               id="noid"
               cols="30"
               rows="5"
               placeholder="your message"
+              id="textarea-message"
             ></textarea>
             <button class="button-message" id="button-contact-message">
               send
