--- a/pages/contact.html
+++ b/pages/contact.html
@@ -33,27 +33,34 @@
             <input type="text" placeholder="Email" id="email-message" />
             <textarea
               name="message"
-              id="noid"
+              id="myTextarea"
               cols="30"
               rows="5"
               placeholder="your message"
-              id="textarea-message"
             ></textarea>
             <button class="button-message" id="button-contact-message">
               send
             </button>
           </form>
-          <h2
-            class="header header__contact text-color-tertiary message-hidden"
-            id="messageHidden"
+          <div
+            class="contact__box__container message-hidden"
+            id="contact-message-container"
           >
-            Thank you for your message 😀
-          </h2>
+            <h2
+              class="header header__contact text-color-tertiary"
+              id="messageHidden"
+            >
+              Thank you for your message 😀
+            </h2>
+          </div>
         </div>
         <div class="contact__info">
           <h2 class="header header__contact text-white">Contact information</h2>
 
-          <a href="#" class="contact__info__box"
+          <a
+            href="https://www.google.com/maps/place/Veneția,+Provincia+Veneția,+Italia/@45.4046829,12.107148,10z/data=!3m1!4b1!4m5!3m4!1s0x477eb1daf1d63d89:0x7ba3c6f0bd92102f!8m2!3d45.4408474!4d12.3155151"
+            target="_blank"
+            class="contact__info__box"
             ><img src="../icons/map.svg" alt="map" class="contact-img" /> Laguna
             Venețiană, Provincia Veneția, Italia</a
           >
