--- a/pages/contact.html
+++ b/pages/contact.html
@@ -36,7 +36,7 @@
               id="myTextarea"
               cols="30"
               rows="5"
-              placeholder="your message"
+              placeholder="Your message"
             ></textarea>
             <button class="button-message" id="button-contact-message">
               send
